# smo-ques

./: .gitignore  CMakeLists.txt
include/core/: smoinfo.h  smorhs.h  solve.h
include/def/: defs.h  strutil.h
include/io/: input.h  output.h
include/math/: mathdef.h  rk.h  rk_three_eighth.h
include/test/: test.h
include/util/: datetime.h  log.h  thread.h
src/: main.c
src/core/: smorhs.c  solve.c
src/def/: strutil.c
src/io/: input.c  output.c
src/math/: mathdef.c  rk.c  rk_three_eighth.c
src/test/: main_test.c  testio.c  testlog.c  testrk.c  teststrutil.c
src/util/: datetime.c  log.c  thread.c
test/InputParseFile()/: input.ini
test/OutputVecLst()/: output.txt
test/TestRungeKutta/: sol.txt
test/solve/: plot_data.m
